@@ -98,6 +98,10 @@ void		 gtk_source_view_set_show_margin 	(GtkSourceView   *view,
 							 gboolean         show);
 gboolean 	 gtk_source_view_get_show_margin 	(GtkSourceView   *view);
 
+void		 gtk_source_view_set_indent_on_tab 	(GtkSourceView   *view, 
+							 gboolean         enable);
+gboolean	 gtk_source_view_get_indent_on_tab 	(GtkSourceView   *view);
+
 void		 gtk_source_view_set_highlight_current_line
 							(GtkSourceView   *view,
 							 gboolean         show);
